manifests/registery/registry-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: docker-registry
spec:
  serviceName: "docker-registry"
  replicas: 1
  selector:
    matchLabels:
      app: docker-registry
  template:
    metadata:
      labels:
        app: docker-registry
    spec:
      containers:
      - name: docker-registry
        image: registry:2 
        ports:
        - containerPort: 5000
          name: registry-port
        volumeMounts:
        - name: registry-local-claim
          mountPath: /var/lib/registry
      #   - name: registry-secret
      #     mountPath: /auth
      # volumes:
      #   - name: registry-secret
      #     secret:
      #       secretName: registry-secret
  volumeClaimTemplates:
  - metadata:
      name: registry-local-claim
    spec:
      selector:
        matchLabels:
          pv-type: registry
      accessModes:
      - ReadWriteOnce
      storageClassName: local-storage
      resources:
        requests:
          storage: 5Gi
