manifests/registery/registry-service.yml
apiVersion: v1
kind: Service
metadata:
  name: docker-registry
  labels:
    app: docker-registry
spec:
  type: NodePort
  ports:
  - port: 31000
    targetPort: 5000
    name: registry-port
    nodePort: 31000
  selector:
    app: docker-registry
